Supported updater on headless server.

--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -10,13 +10,13 @@ block.cyber-io-sender.description=\u53D1\u9001\u6570\u636E
 block.cyber-io-virus.name=\u75C5\u6BD2
 block.cyber-io-virus.description=\u65E0\u9650\u8513\u5EF6\u7684\u75C5\u6BD2
 block.cyber-io-land-projector.name=\u9646\u5730\u6295\u5F71\u5668
-block.cyber-io-land-projector.description=\u6295\u5F71\u4E00\u5757\u5168\u606F\u9646\u5730\uFF0C\u53EF\u4EE5\u5EFA\u9020\uFF0C\u7531\u666E\u62C9\u59C6\u661F\u516C\u53F8\u8BBE\u8BA1
+block.cyber-io-land-projector.description=\u6295\u5F71\u4E00\u5757\u5168\u606F\u9646\u5730\uFF0C\u53EF\u4EE5\u5EFA\u9020\uFF0C\u7531Plum Star\u516C\u53F8\u8BBE\u8BA1
 block.cyber-io-holo-floor.name=\u5168\u606F\u5730\u677F
 block.cyber-io-holo-floor.description=\u5168\u606F\u5730\u677F
 block.cyber-io-holo-wall.name=\u5168\u606F\u5899
-block.cyber-io-holo-wall.description=\u5168\u606F\u5899\uFF0C\u7531\u666E\u62C9\u59C6\u661F\u516C\u53F8\u8BBE\u8BA1\uFF0C\u4F1A\u968F\u7740\u65F6\u95F4\u63A8\u79FB\u81EA\u52A8\u6062\u590D\u751F\u547D\u503C
+block.cyber-io-holo-wall.description=\u5168\u606F\u5899\uFF0C\u7531Plum Star\u661F\u516C\u53F8\u8BBE\u8BA1\uFF0C\u4F1A\u968F\u7740\u65F6\u95F4\u63A8\u79FB\u81EA\u52A8\u6062\u590D\u751F\u547D\u503C
 block.cyber-io-holo-wall-large.name=\u5927\u578B\u5168\u606F\u5899
-block.cyber-io-holo-wall-large.description=\u66F4\u5927\u7684\u5168\u606F\u5899\uFF0C\u7531\u666E\u62C9\u59C6\u661F\u516C\u53F8\u8BBE\u8BA1\uFF0C\u4F1A\u968F\u7740\u65F6\u95F4\u63A8\u79FB\u81EA\u52A8\u6062\u590D\u751F\u547D\u503C
+block.cyber-io-holo-wall-large.description=\u66F4\u5927\u7684\u5168\u606F\u5899\uFF0C\u7531Plum Star\u661F\u516C\u53F8\u8BBE\u8BA1\uFF0C\u4F1A\u968F\u7740\u65F6\u95F4\u63A8\u79FB\u81EA\u52A8\u6062\u590D\u751F\u547D\u503C
 block.cyber-io-anti-virus.name=\u6740\u6BD2\u8F6F\u4EF6
 block.cyber-io-anti-virus.description=\u5982\u679C\u4F60\u73A9\u4E0D\u4E86\u8FD9\u4E2A\u6E38\u620F\uFF0C\u90A3\u4E48\u5C31\u53BB\u628A\u6740\u8F6F\u5173\u4E86
 block.cyber-io-underdrive-projector.name=\u51CF\u901F\u6295\u5F71\u5668
@@ -47,40 +47,41 @@ block.cyber-io-stream-server.name=\u6D41\u5F0F\u670D\u52A1\u5668
 block.cyber-io-stream-server.description=\u80FD\u591F\u5206\u4EAB\u4E2A\u4EBA\u6E38\u620F\u7ECF\u5386\u7684\u76F4\u64AD\u670D\u52A1\u5668\uFF01\u795D\u4F60\u73A9\u5F97\u5F00\u5FC3\uFF01
 block.cyber-io-jammer.name=\u5E72\u6270\u5668
 block.cyber-io-jammer.description=\u5E72\u6270\u8BBE\u5907\uFF01\u6CE8\u610F\uFF0C\u4F60\u7684\u624B\u673A\u6216\u8BB8\u4F1A\u88AB\u5E72\u6270
-block.cyber-io-cyberion-mixer.name=\u8D5B\u535A\u6DF7\u5408\u5668
+block.cyber-io-cyberion-mixer.name=\u8D5B\u535A\u9F99\u6DF7\u5408\u5668
 block.cyber-io-cyberion-mixer.description=\u7406\u8BBA\u4E0A\u770B\u7740\u8FC7\u5269\uFF0C\u5B9E\u9645\u4E0A\u4E5F\u53EF\u4E00\u7528
 block.cyber-io-holo-projector.name=\u5168\u606F\u6295\u5F71\u4EEA
 block.cyber-io-holo-projector.description=\u4F7F\u7528\u8D5B\u535A\u6DF7\u5408\u7269\u6295\u5F71\u5168\u606F\u5355\u4F4D
 block.cyber-io-stealth.name=\u9690\u8EAB
 block.cyber-io-stealth.description=******\u6743\u9650\u53D7\u9650*******
-block.cyber-io-aqua-cyberion.name=\u8D5B\u535A\u6DB2\u4F53
+block.cyber-io-aqua-cyberion.name=\u8D5B\u535A\u9F99
 block.cyber-io-aqua-cyberion.description=\u666E\u666E\u901A\u901A\u7684\u6DB2\u4F53
 block.cyber-io-wireless-tower.name=\u65E0\u7EBF\u4FE1\u53F7\u5854
-block.cyber-io-wireless-tower.description=\u57FA\u4E8E\u666E\u62C9\u59C6\u661F\u79D1\u6280
+block.cyber-io-wireless-tower.description=\u57FA\u4E8EPlum Star\u661F\u79D1\u6280
+block.cyber-io-wireless-tower.stats.power-use=Based on the amount of power use.
 block.cyber-io-data-miner.name=\u6570\u636E\u6316\u6398\u673A
-block.cyber-io-data-miner.description=\u901A\u8FC7AI\u6280\u672F\u63D0\u53D6\u771F\u6B63\u7684\u77FF\u7269
+block.cyber-io-data-miner.description=\u901A\u8FC7AI\u6280\u672F\u63D0\u53D6\u771F\u6B63\u7684\u77FF\u7269\uFF0C\u627E\u5230\u4E86\u52A1\u5FC5\u8981\u597D\u597D\u7559\u5B58
 block.cyber-io-heimdall.name=\u6D77\u59C6\u8FBE\u5C14
-block.cyber-io-heimdall.description=\u96C6\u751F\u7269\u5B66\u3001\u8111\u79D1\u5B66\u548C\u7269\u8054\u7F51\u6280\u672F\u4E3A\u4E00\u8EAB\uFF0C\u4F7F\u7528\u4E86\u7C7B\u8111-\u8BA1\u7B97\u673A\u63A5\u53E3\u548C\u795E\u7ECF\u7F51\u7EDC\uFF0C\u53EF\u4EE5\u5F7B\u5E95\u6539\u53D8\u654C\u4EBA\u7684\u601D\u7EF4
-block.cyber-io-heimdall.details=\u65B0\u8111\u516C\u53F8\u7684\u4EBA\u9020\u4EA7\u54C1
+block.cyber-io-heimdall.description=\u96C6\u751F\u7269\u5B66\u3001\u8111\u79D1\u5B66\u548C\u7269\u8054\u7F51\u6280\u672F\u4E3A\u4E00\u8EAB\uFF0C\u4F7F\u7528\u4E86\u7C7B\u8111\u2013\u8BA1\u7B97\u673A\u63A5\u53E3\u548C\u795E\u7ECF\u7F51\u7EDC\uFF0C\u53EF\u4EE5\u5F7B\u5E95\u6539\u53D8\u654C\u4EBA\u7684\u601D\u7EF4
+block.cyber-io-heimdall.details=New Brains\u516C\u53F8\u7684\u4EBA\u9020\u4EA7\u54C1
 block.cyber-io-heimdall-eye.name=\u6D77\u59C6\u8FBE\u5C14\u4E4B\u773C
 block.cyber-io-heimdall-eye.description=\u53EF\u62C6\u5378\u7EC4\u5EFA\uFF0C\u4E13\u4E3A\u6D77\u59C6\u8FBE\u5C14\u5347\u7EA7\u800C\u8BBE\u8BA1\uFF0C\u53EF\u4EE5\u76D1\u89C6\u4EFB\u4F55\u4ED6\u8BA4\u4E3A\u50CF\u654C\u4EBA\u7684\u4EBA
-block.cyber-io-heimdall-eye.details=\u65B0\u8111\u516C\u53F8\u7684\u5347\u7EA7\u7EC4\u4EF6
+block.cyber-io-heimdall-eye.details=New Brains\u516C\u53F8\u7684\u5347\u7EA7\u7EC4\u4EF6
 block.cyber-io-heimdall-ear.name=\u6D77\u59C6\u8FBE\u5C14\u4E4B\u8033
 block.cyber-io-heimdall-ear.description=\u58F0\u6CE2\u4F20\u611F\u5668\uFF0C\u4E13\u4E3A\u6D77\u59C6\u8FBE\u5C14\u5347\u7EA7\u800C\u8BBE\u8BA1\uFF0C\u53EF\u4EE5\u68C0\u6D4B\u5230\u654C\u4EBA\u7684\u9707\u52A8\u5E76\u610F\u5FF5\u4EA7\u751F\u5E7F\u64AD
-block.cyber-io-heimdall-ear.details= \u65B0\u8111\u516C\u53F8\u7684\u5347\u7EA7\u7EC4\u4EF6
+block.cyber-io-heimdall-ear.details=New Brains\u516C\u53F8\u7684\u5347\u7EA7\u7EC4\u4EF6
 # Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=\u82AF\u7247
 # Liquids
-liquid.cyber-io-cyberion.name=\u8D5B\u535A\u6DB2\u4F53
-liquid.cyber-io-cyberion.description=\u7531\u666E\u62C9\u59C6\u661F\u516C\u53F8\u53D1\u660E\u7684\u6DB2\u4F53\uFF0C\u6CA1\u4EBA\u77E5\u9053\u5B83\u662F\u5982\u4F55\u5DE5\u4F5C\u7684
+liquid.cyber-io-cyberion.name=\u8D5B\u535A\u9F99
+liquid.cyber-io-cyberion.description=\u7531Plum Star\u661F\u516C\u53F8\u53D1\u660E\u7684\u6DB2\u4F53\uFF0C\u6CA1\u4EBA\u77E5\u9053\u5B83\u662F\u5982\u4F55\u5DE5\u4F5C\u7684
 # Units
 unit.cyber-io-holo-miner.name=\u5168\u606F\u77FF\u5DE5
 unit.cyber-io-holo-miner.description=\u7531\u5168\u606F\u6295\u5F71\u4EEA\u5236\u9020\u7684\u77ED\u547D\u5DE5\u8702
 unit.cyber-io-holo-fighter.name=\u5168\u606F\u6253\u624B
 unit.cyber-io-holo-fighter.description=\u7531\u5168\u606F\u6295\u5F71\u4EEA\u5236\u9020\u7684\u77ED\u547D\u6253\u624B
 unit.cyber-io-holo-guardian.name=\u5168\u606F\u5B88\u536B
-unit.cyber-io-holo-guardian.description=\u666E\u62C9\u59C6\u661F\u516C\u53F8\u7684\u4FDD\u5B89\uFF0C\u7531\u5168\u606F\u6295\u5F71\u4EEA\u5236\u9020\uFF0C\u4F46\u662F\u5176\u751F\u547D\u4E0D\u7A33\u5B9A
+unit.cyber-io-holo-guardian.description=Plum Star\u661F\u516C\u53F8\u7684\u4FDD\u5B89\uFF0C\u7531\u5168\u606F\u6295\u5F71\u4EEA\u5236\u9020\uFF0C\u4F46\u662F\u5176\u751F\u547D\u4E0D\u7A33\u5B9A
 unit.cyber-io-holo-architect.name=\u5168\u606F\u5EFA\u9020\u673A
 unit.cyber-io-holo-architect.description=\u7531\u5168\u606F\u6295\u5F71\u4EEA\u5236\u9020\u7684\u5EFA\u9020\u673A\uFF0C\u5B83\u4E0D\u662F\u5EFA\u9020
 unit.cyber-io-holo-supporter.name=\u5168\u606F\u8F85\u52A9\u673A
@@ -116,10 +117,19 @@ bar.cyber-io.rest-life.figure=\u5269\u4F59\u5BFF\u547D\uFF1A {0}s
 bar.cyber-io.rest-resurrect=\u5269\u4F59\u590D\u6D3B\u6B21\u6570\uFF1A {0} \u6B21
 # Bundles
 cyber-io.cyberion-req=\u8D5B\u535A
+cyber-io.cost.second=\u79D2
+cyber-io.cost.minute=\u5206
+cyber-io.percent.plus=+{0}%
+cyber-io.percent.minus=-{0}%
+cyber-io.value.plus=+{0}
+cyber-io.value.minus=-{0}
+cyber-io.adjustable-overdrive.speed-increase=\u4ECE +{0}% \u5230 +{1}%
 # Controls
 control.cyber-io.yes=\u662F
 control.cyber-io.no=\u5426
 control.cyber-io.ok=OK
+control.cyber-io.update-mod.success=CyberIO {0} updated successfully. Please restart the game to reload CyberIO.
+control.cyber-io.update-mod.failed=Failed to update CyberIO {0} because {1}.
 # StatusEffects
 status.cyber-io-infected.name=\u6C61\u67D3
 status.cyber-io-infected.description=\u6C61\u67D3\u4F1A\u6839\u636E\u5F53\u524D\u8840\u91CF\u503C\u964D\u4F4E\u751F\u547D
@@ -128,15 +138,29 @@ status.cyber-io-vulnerable.description=\u6CE8\u610F\uFF01\u968F\u65F6\u4F1A\u6B7
 status.cyber-io-static.name=\u9759\u6B62
 status.cyber-io-static.description=\u8B66\u544A\uFF01\u68C0\u6D4B\u5230\u5E72\u6270\uFF01
 # Abilities
-ability.cyber-io-holo=\u4F7F\u7528\u8D5B\u535A\u6DB2\u4F53\u7684\u5168\u606F\u6295\u5F71\u5355\u4F4D\u5C06\u4F1A\u968F\u7740\u65F6\u95F4\u6D41\u901D\u53D8\u5F97\u8106\u5F31
+ability.cyber-io-holo=\u4F7F\u7528\u8D5B\u535A\u9F99\u7684\u5168\u606F\u6295\u5F71\u5355\u4F4D\u5C06\u4F1A\u968F\u7740\u65F6\u95F4\u6D41\u901D\u53D8\u5F97\u8106\u5F31
 ability.cyber-io-holo-force-field=\u6295\u5F71\u4EEA\u81EA\u52A8\u91CD\u5EFA\u5168\u606F\u529B\u5899
 # Settings
 setting.cyber-io-connection-opacity.name=\u8FDE\u63A5\u4E0D\u900F\u660E\u5EA6
 setting.cyber-io-connection-density.name=\u8FDE\u63A5\u5BC6\u96C6\u5EA6
 setting.cyber-io-always-show-link.name=\u603B\u662F\u663E\u793A\u8FDE\u63A5
-setting.cyber-io-show-welcome.name=\u4ECE\u666E\u62C9\u59C6\u661F\u516C\u53F8\u83B7\u5F97\u6570\u636E
+setting.cyber-io-connection-size.name=Connection Arrow Size
+setting.cyber-io-show-link-circle.name=Show Connection Circle
+setting.cyber-io-show-welcome.name=\u4ECEPlum Star\u661F\u516C\u53F8\u83B7\u5F97\u6570\u636E
 setting.cyber-io-show-update.name=\u663E\u793ACyberIO\u66F4\u65B0\u63D0\u793A
 # UI
 ui.cyber-io.mouse-position.tile=\u5730\u677F\uFF1A{0},{1}
 ui.cyber-io.mouse-position.build=\u5EFA\u7B51\uFF1A{0},{1}
 ui.cyber-io.mouse-position.world=\u4E16\u754C\uFF1A{0},{1}
+# Heimdall
+heimdall.damage.name=\u4F24\u5BB3
+heimdall.range.name=\u8303\u56F4
+heimdall.wave-speed.name=\u6CE2\u9891
+heimdall.wave-width.name=\u6CE2\u5BBD
+heimdall.reload-time.name=\u590D\u539F
+heimdall.max-brain-wave-num.name=\u6CE2\u6570
+heimdall.control-line.name=\u63A7\u5236\u6761
+heimdall.force-field-max.name=\u76FE\u5BB9
+heimdall.force-field-regen.name=\u518D\u751F\u76FE\u5BB9
+heimdall.force-field-radius.name=\u62A4\u76FE\u8303\u56F4
+heimdall.force-field-restore-time.name=\u76FE\u5BB9\u518D\u751F\u65F6\u95F4
