Supported searching for scenes in the parent welcome information.

--- a/assets/welcomes/zh_CN.properties
+++ b/assets/welcomes/zh_CN.properties
@@ -1,3 +1,9 @@
+#---Do not translate---
+Default.title=Default for Test
+Default=If you saw this page, it might mean you are using the CyberIO for test or Cyber mod didn't load properly.\n\
+  If you aren't a developer (modder), please contact with the author(s) of CyberIO.
+Default.read=I see
+#---Do not translate---
 #Standard
 welcome=\u6B22\u8FCE\u6E38\u73A9 Cyber IO {0}.
 Discord.title=\u6709\u65F6\uFF0C\u5F53\u4F60\u72EC\u81EA\u6F2B\u6B65\u592A\u7A7A\uFF0C\u53EF\u80FD\u4F1A\u60F3\u5BFB\u627E\u4E00\u4E2A\u793E\u533A\u56E2\u961F\n\
