Welcome system now supports more templates and actions.

--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -146,7 +146,7 @@ setting.cyber-io-connection-density.name=\u8FDE\u63A5\u5BC6\u96C6\u5EA6
 setting.cyber-io-always-show-link.name=\u603B\u662F\u663E\u793A\u8FDE\u63A5
 setting.cyber-io-connection-size.name=Connection Arrow Size
 setting.cyber-io-show-link-circle.name=Show Connection Circle
-setting.cyber-io-show-welcome.name=\u4ECEPlum Star\u661F\u516C\u53F8\u83B7\u5F97\u6570\u636E
+setting.cyber-io-show-welcome.name=\u4ECEPlum Star\u516C\u53F8\u83B7\u5F97\u6570\u636E
 setting.cyber-io-show-update.name=\u663E\u793ACyberIO\u66F4\u65B0\u63D0\u793A
 # UI
 ui.cyber-io.mouse-position.tile=\u5730\u677F\uFF1A{0},{1}
