--- a/assets/welcomes/zh_CN.properties
+++ b/assets/welcomes/zh_CN.properties
@@ -47,3 +47,10 @@ NewBrains.title=\u65B0\u7684\u5927\u8111
 NewBrains=New Brains\u516C\u53F8\u5F15\u9886\u751F\u7269\u5B66\u3001\u836F\u5B66\u548C\u795E\u7ECF\u5B66\u884C\u4E1A\u9876\u6D41\uFF0C\u662F\u5B87\u5B99\u4E2D\u6700\u5927\u7684\u516C\u53F8\u4E4B\u4E00\u3002\n\
 \u6B63\u5982\u5176\u540D\uFF0C\u4ED6\u4EEC\u7AD9\u5728\u4E86\u8111\u79D1\u5B66\u7684\u524D\u6CBF\u4F4D\u7F6E\u4E0A\u3002\n\u4F60\u4EEC\u5927\u591A\u6570\u53EF\u80FD\u8FD8\u6CA1\u6709\u6CE8\u610F\u5230\uFF0C\u8FD9\u4E5F\u662F\u4ED6\u4EEC\u9879\u76EE\u4E2D\u7684\u4E00\u90E8\u5206\u3002
 NewBrains.read=\u6807\u8BB0\u4E3A\u5DF2\u8BFB
+AdBlock.title=Block Ad
+AdBlock=Do you feel the popup advertisement is annoying?\n\
+  Let's install the AdBlock, which can provide a completely clear environment for you!\n\
+  P.S.: If you want to bring ad back, please check the game settings at:\n\
+  Settings >> Game >> \u4ECEPlum Star\u516C\u53F8\u83B7\u5F97\u6570\u636E
+AdBlock.yes=Install
+AdBlock.no=Not Now
