Added first installation welcome. Added config reload/reset on server.

--- a/assets/welcomes/zh_CN.properties
+++ b/assets/welcomes/zh_CN.properties
@@ -16,7 +16,7 @@ Discord.no=\u6807\u8BB0\u4E3A\u5783\u573E\u5185\u5BB9
 UpdateECHO.title=\u66F4\u65B0\u201C\u98DE\u58F0\u201D
 UpdateECHO=News: \u6700\u8FD1\uFF0C\u201C\u98DE\u58F0\u201D\u7EC8\u7AEF\u63A8\u51FA\u4E86\u65B0\u7248\u672C{0}\u3002\n\
   \u4F60\u53EF\u4EE5\u70B9\u51FB\u4E0B\u9762\u7684\u6309\u94AE\u66F4\u65B0\u4F60\u7684\u7EC8\u7AEF
-UpdateECHO.update=\u66F4\u65B0
+UpdateECHO.yes=\u66F4\u65B0
 UpdateECHO.no=\u4EE5\u540E\u63D0\u9192\u6211
 UpdateECHO.dont-show=\u4E0D\u518D\u663E\u793A
 #v2
