The eve of v3.2

--- a/assets/welcomes/zh_CN.properties
+++ b/assets/welcomes/zh_CN.properties
@@ -16,9 +16,9 @@ Discord.no=\u6807\u8BB0\u4E3A\u5783\u573E\u5185\u5BB9
 UpdateECHO.title=\u66F4\u65B0\u201C\u98DE\u58F0\u201D
 UpdateECHO=News: \u6700\u8FD1\uFF0C\u201C\u98DE\u58F0\u201D\u7EC8\u7AEF\u63A8\u51FA\u4E86\u65B0\u7248\u672C{0}\u3002\n\
   \u4F60\u53EF\u4EE5\u70B9\u51FB\u4E0B\u9762\u7684\u6309\u94AE\u66F4\u65B0\u4F60\u7684\u7EC8\u7AEF
-UpdateECHO.yes=\u66F4\u65B0
-UpdateECHO.no=\u4EE5\u540E\u63D0\u9192\u6211
-UpdateECHO.dont-show=\u4E0D\u518D\u663E\u793A
+UpdateECHO.button-a=\u66F4\u65B0
+UpdateECHO.button-b=\u4EE5\u540E\u63D0\u9192\u6211
+UpdateECHO.button-c=\u4E0D\u518D\u663E\u793A
 #v2
 EmploymentVerification.title=\u9A8C\u8BC1\u96C7\u4F63\u72B6\u6001
 EmploymentVerification=\u6B22\u8FCE\u5C31\u804C\u4E8EPlum Star\u516C\u53F8\uFF0C\u795D\u4F60\u4EAB\u53D7\u4E8E\u5D2D\u65B0\u7684\u5168\u90E8\u8D5B\u535A\u5B66\u79D1\u6280\uFF01\n\
