Customize the update info file location. Monochromize compatibility. Add installation email in Japanese.

--- a/assets/welcomes/zh_CN.properties
+++ b/assets/welcomes/zh_CN.properties
@@ -5,8 +5,8 @@ Default=If you saw this page, it might mean you are using the CyberIO for test o
 Default.read=I see
 #---Do not translate---
 #Standard
-welcome=\u6B22\u8FCE\u6E38\u73A9 Cyber IO {0}.
-Discord.title=\u6709\u65F6\uFF0C\u5F53\u4F60\u72EC\u81EA\u6F2B\u6B65\u592A\u7A7A\uFF0C\u53EF\u80FD\u4F1A\u60F3\u5BFB\u627E\u4E00\u4E2A\u793E\u533A\u56E2\u961F\n\
+welcome.title=\u6B22\u8FCE\u6E38\u73A9 Cyber IO {0}.
+Discord=\u6709\u65F6\uFF0C\u5F53\u4F60\u72EC\u81EA\u6F2B\u6B65\u592A\u7A7A\uFF0C\u53EF\u80FD\u4F1A\u60F3\u5BFB\u627E\u4E00\u4E2A\u793E\u533A\u56E2\u961F\n\
 \u4F60\u53EF\u4EE5\u5206\u4EAB\u4F60\u7684\u7ECF\u9A8C\u6216\u8005\u95EE\u4E9B\u95EE\u9898\uFF08\u5F53\u7136\u4F60\u7528\u4E0D\u7740\u95EEbug\uFF09\u3002\n\
 \u5C3D\u7BA1\u201C\u98DE\u58F0\u201D\u4FE1\u53F7\u4E0D\u597D\uFF0C\u4E16\u754C\u4E0A\u4ECD\u7136\u6709\u4EBA\u5728\u60E6\u8BB0\u7740\u4F60\u2014\u2014Plum Star\u7684Discord\u3002\n\
 \u52A0\u5165\u6211\u4EEC\uFF0C\u5206\u4EAB\u4F60\u7684\u9645\u9047\uFF0C\u5766\u9732\u4F60\u7684\u7591\u95EE\u5427\uFF01
@@ -47,10 +47,10 @@ NewBrains.title=\u65B0\u7684\u5927\u8111
 NewBrains=New Brains\u516C\u53F8\u5F15\u9886\u751F\u7269\u5B66\u3001\u836F\u5B66\u548C\u795E\u7ECF\u5B66\u884C\u4E1A\u9876\u6D41\uFF0C\u662F\u5B87\u5B99\u4E2D\u6700\u5927\u7684\u516C\u53F8\u4E4B\u4E00\u3002\n\
 \u6B63\u5982\u5176\u540D\uFF0C\u4ED6\u4EEC\u7AD9\u5728\u4E86\u8111\u79D1\u5B66\u7684\u524D\u6CBF\u4F4D\u7F6E\u4E0A\u3002\n\u4F60\u4EEC\u5927\u591A\u6570\u53EF\u80FD\u8FD8\u6CA1\u6709\u6CE8\u610F\u5230\uFF0C\u8FD9\u4E5F\u662F\u4ED6\u4EEC\u9879\u76EE\u4E2D\u7684\u4E00\u90E8\u5206\u3002
 NewBrains.read=\u6807\u8BB0\u4E3A\u5DF2\u8BFB
-AdBlock.title=\u5c4f\u853d\u5e7f\u544a
-AdBlock=\u4f60\u89c9\u5f97\u5f39\u7a97\u5f88\u70e6\u4eba\u5417？\n\
-   \u90a3\u5c31\u6765\u8bd5\u8bd5 AdBlock \u5427\uff0c\u8fd8\u4f60\u4e00\u4e2a\u5e72\u51c0\u6e05\u723d\u7684\u6d4f\u89c8\u73af\u5883！\n\
-   \u6ce8\uff1a\u5982\u679c\u4f60\u60f3\u6062\u590d\u67d0\u4e9b\u5e7f\u544a\uff0c\u8bf7\u5728\u6b64\u5904\u8bbe\u7f6e\uff1a\n\
-   \u8bbe\u7f6e >> \u6e38\u620f >> \u4ECEPlum Star\u516C\u53F8\u83B7\u5F97\u6570\u636E
-AdBlock.yes=\u5b89\u88c5
-AdBlock.no=\u7a0d\u540e\u63d0\u9192\u6211
+AdBlock.title=\u5C4F\u853D\u5E7F\u544A
+AdBlock=\u4F60\u89C9\u5F97\u5F39\u7A97\u5F88\u70E6\u4EBA\u5417\uFF1F\n\
+   \u90A3\u5C31\u6765\u8BD5\u8BD5 AdBlock \u5427\uFF0C\u8FD8\u4F60\u4E00\u4E2A\u5E72\u51C0\u6E05\u723D\u7684\u6D4F\u89C8\u73AF\u5883\uFF01\n\
+   \u6CE8\uFF1A\u5982\u679C\u4F60\u60F3\u6062\u590D\u67D0\u4E9B\u5E7F\u544A\uFF0C\u8BF7\u5728\u6B64\u5904\u8BBE\u7F6E\uFF1A\n\
+   \u8BBE\u7F6E >> \u6E38\u620F >> \u4ECEPlum Star\u516C\u53F8\u83B7\u5F97\u6570\u636E
+AdBlock.yes=\u5B89\u88C5
+AdBlock.no=\u7A0D\u540E\u63D0\u9192\u6211
