Fixed CyberIO settings didn't always show on settings menu.

--- a/assets/welcomes/zh_CN.properties
+++ b/assets/welcomes/zh_CN.properties
@@ -51,6 +51,6 @@ AdBlock.title=\u5C4F\u853D\u5E7F\u544A
 AdBlock=\u4F60\u89C9\u5F97\u5F39\u7A97\u5F88\u70E6\u4EBA\u5417\uFF1F\n\
    \u90A3\u5C31\u6765\u8BD5\u8BD5 AdBlock \u5427\uFF0C\u8FD8\u4F60\u4E00\u4E2A\u5E72\u51C0\u6E05\u723D\u7684\u6D4F\u89C8\u73AF\u5883\uFF01\n\
    \u6CE8\uFF1A\u5982\u679C\u4F60\u60F3\u6062\u590D\u67D0\u4E9B\u5E7F\u544A\uFF0C\u8BF7\u5728\u6B64\u5904\u8BBE\u7F6E\uFF1A\n\
-   \u8BBE\u7F6E >> \u6E38\u620F >> \u4ECEPlum Star\u516C\u53F8\u83B7\u5F97\u6570\u636E
+   \u8BBE\u7F6E >> Cyber IO >> \u4ECEPlum Star\u516C\u53F8\u83B7\u5F97\u6570\u636E
 AdBlock.yes=\u5B89\u88C5
 AdBlock.no=\u7A0D\u540E\u63D0\u9192\u6211
