--- a/assets/bundles/bundle_ru.properties
+++ b/assets/bundles/bundle_ru.properties
@@ -87,80 +87,97 @@ unit.cyber-io-holo-architect.description=\u0421\u0442\u0440\u043E\u0438\u0442\u0
 unit.cyber-io-holo-supporter.name=\u0421\u0442\u043E\u0440\u043E\u043D\u043D\u0438\u043A \u0433\u043E\u043B\u043E\u0433\u0440\u0430\u043C\u043C\u044B
 unit.cyber-io-holo-supporter.description=\u041F\u043E\u0434\u0434\u0435\u0440\u0436\u043A\u0430, \u0441\u043F\u0440\u043E\u0435\u0446\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u0430\u044F \u0433\u043E\u043B\u043E\u0433\u0440\u0430\u043C\u043C\u043D\u044B\u043C \u043F\u0440\u043E\u0435\u043A\u0442\u043E\u0440\u043E\u043C, \u043D\u043E \u043D\u0435 \u0441\u043F\u043E\u0441\u043E\u0431\u043D\u0430\u044F \u0438\u0441\u043A\u0443\u043F\u0438\u0442\u044C \u0441\u0432\u043E\u044E \u0432\u0438\u043D\u0443.
 # Bars
-bar.cyber-io.generation=Generation {0}
-bar.cyber-io.slow-down=Boost: -{0}%
-bar.cyber-io.efficiency-absorption=EFF Absorb: {0}%
-bar.cyber-io.team=Team: {0}
-bar.cyber-io.spiral-rotate-speed=RotateSPD: {0}
-bar.cyber-io.alpha=Alpha: {0}
-bar.cyber-io.range=Range: {0} blocks
-bar.cyber-io.cool-down=Cool Down: {0}s
-bar.cyber-io.is-alive=Is Alive: {0}
-bar.cyber-io.is-projecting=Is Projecting: {0}
-bar.cyber-io.rest-restore=Rest Restore: {0}
-bar.cyber-io.charge=Charge: {0}s
-bar.cyber-io.is-asleep=Is Asleep: {0}
+bar.cyber-io.generation=\u041F\u043E\u043A\u043E\u043B\u0435\u043D\u0438\u0435 {0}
+bar.cyber-io.slow-down=\u0443\u0432\u0435\u043B\u0438\u0447\u0435\u043D\u0438\u0435: -{0}%
+bar.cyber-io.efficiency-absorption=\u041F\u043E\u0433\u043B\u043E\u0449\u0435\u043D\u0438\u0435: {0}%
+bar.cyber-io.team=\u041A\u043E\u043C\u0430\u043D\u0434\u0430: {0}
+bar.cyber-io.spiral-rotate-speed=\u041F\u043E\u0432\u0435\u0440\u043D\u0443\u0442\u044C \u0441\u043A\u043E\u0440\u043E\u0441\u0442\u044C: {0}
+bar.cyber-io.alpha=\u0410\u043B\u044C\u0444\u0430: {0}
+bar.cyber-io.range=\u0414\u0438\u0430\u043F\u0430\u0437\u043E\u043D: {0} \u0431\u043B\u043E\u043A\u0438
+bar.cyber-io.cool-down=CD: {0}s
+bar.cyber-io.is-alive=\u0416\u0438\u0432\u043E\u0439: {0}
+bar.cyber-io.is-projecting=\u043F\u0440\u043E\u0435\u0446\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435: {0}
+bar.cyber-io.rest-restore=\u043E\u0442\u0434\u044B\u0445 \u0432\u043E\u0441\u0441\u0442\u0430\u043D\u043E\u0432\u043B\u0435\u043D\u0438\u0435: {0}
+bar.cyber-io.charge=\u0437\u0430\u0440\u044F\u0434: {0}s
+bar.cyber-io.is-asleep=\u0441\u043F\u044F\u0449\u0438\u0439: {0}
 bar.cyber-io.last-damaged=Last Damage: {0}s
-bar.cyber-io.progress=Progress: {0}%
-bar.cyber-io.prism=Prism
-bar.cyber-io.prism.pl=Prisms
-bar.cyber-io.linked=Linked
-bar.cyber-io.linked.no=No Link
-bar.cyber-io.receiver=Receiver: {0}
-bar.cyber-io.sender=Sender: {0}
+bar.cyber-io.progress=\u043F\u0440\u043E\u0433\u0440\u0435\u0441\u0441: {0}%
+bar.cyber-io.prism=\u043F\u0440\u0438\u0437\u043C\u0430
+bar.cyber-io.prism.pl=\u043F\u0440\u0438\u0437\u043C\u044B
+bar.cyber-io.linked=\u0421\u0432\u044F\u0437\u0430\u043D\u043D\u044B\u0439
+bar.cyber-io.linked.no=\u043D\u0435\u0442 \u0441\u0432\u044F\u0437\u0438
+bar.cyber-io.receiver=\u043F\u0440\u0438\u0435\u043C\u043D\u0438\u043A: {0}
+bar.cyber-io.sender=\u043E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u0435\u043B\u044C: {0}
 bar.cyber-io.ani-state-last=Last: {0}
-bar.cyber-io.null=Null
-bar.cyber-io.client=Client: {0}
-bar.cyber-io.host=Host: {0}
-bar.cyber-io.rest-life=Rest Life
-bar.cyber-io.rest-life.figure=Rest Life: {0}s
-bar.cyber-io.rest-resurrect=Rest Life: {0} times
+bar.cyber-io.null=\u043D\u0443\u043B\u0435\u0432\u043E\u0439
+bar.cyber-io.client=\u043A\u043B\u0438\u0435\u043D\u0442: {0}
+bar.cyber-io.host=\u0425\u043E\u0437\u044F\u0438\u043D: {0}
+bar.cyber-io.rest-life=\u043E\u0441\u0442\u0430\u043B\u044C\u043D\u043E\u0435 \u0441\u0440\u043E\u043A \u0436\u0438\u0437\u043D\u0438
+bar.cyber-io.rest-life.figure=\u043E\u0441\u0442\u0430\u043B\u044C\u043D\u043E\u0435 \u0441\u0440\u043E\u043A \u0436\u0438\u0437\u043D\u0438: {0}s
+bar.cyber-io.rest-resurrect=\u043E\u0441\u0442\u0430\u043B\u044C\u043D\u043E\u0435 \u0436\u0438\u0437\u043D\u044C: {0} \u0432\u0440\u0435\u043C\u0435\u043D\u0430
 # Bundles
-cyber-io.cyberion-req=cyberion
+cyber-io.cyberion-req=\u043A\u0438\u0431\u0435\u0440\u0438\u043E\u043D
 cyber-io.cost.second=sec
 cyber-io.cost.minute=min
 cyber-io.percent.plus=+{0}%
 cyber-io.percent.minus=-{0}%
 cyber-io.value.plus=+{0}
 cyber-io.value.minus=-{0}
-cyber-io.adjustable-overdrive.speed-increase=+{0}% to +{1}%
+cyber-io.adjustable-overdrive.speed-increase=+{0}% \u043A +{1}%
 # Controls
 control.cyber-io.yes=Yes
 control.cyber-io.no=No
 control.cyber-io.ok=OK
-control.cyber-io.update-mod.success=CyberIO {0} updated successfully. Please restart the game to reload CyberIO.
-control.cyber-io.update-mod.failed=Failed to update CyberIO {0} because {1}.
+control.cyber-io.update-mod.success=CyberIO {0} \u0443\u0441\u043F\u0435\u0448\u043D\u043E \u043E\u0431\u043D\u043E\u0432\u043B\u0435\u043D. \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u043F\u0435\u0440\u0435\u0437\u0430\u043F\u0443\u0441\u0442\u0438\u0442\u0435 \u0438\u0433\u0440\u0443, \u0447\u0442\u043E\u0431\u044B \u043F\u0435\u0440\u0435\u0437\u0430\u0433\u0440\u0443\u0437\u0438\u0442\u044C CyberIO.
+control.cyber-io.update-mod.failed=\u041D\u0435 \u0443\u0434\u0430\u043B\u043E\u0441\u044C \u043E\u0431\u043D\u043E\u0432\u0438\u0442\u044C CyberIO {0} \u0438\u0437-\u0437\u0430 {1}.
 # StatusEffects
-status.cyber-io-infected.name=Infected
-status.cyber-io-infected.description=The infected will hurt based on their current HP.
-status.cyber-io-vulnerable.name=Vulnerable
-status.cyber-io-vulnerable.description=WATCH OUT! They will be dead at any time!
-status.cyber-io-static.name=Static
-status.cyber-io-static.description=Warning! Signal interference detected.
+status.cyber-io-infected.name=\u0437\u0430\u0440\u0430\u0436\u0435\u043D\u043D\u044B\u0439
+status.cyber-io-infected.description=\u0417\u0430\u0440\u0430\u0436\u0435\u043D\u043D\u044B\u0435 \u0431\u0443\u0434\u0443\u0442 \u0431\u043E\u043B\u0435\u0442\u044C \u0432 \u0437\u0430\u0432\u0438\u0441\u0438\u043C\u043E\u0441\u0442\u0438 \u043E\u0442 \u0438\u0445 \u0442\u0435\u043A\u0443\u0449\u0435\u0433\u043E HP.
+status.cyber-io-vulnerable.name=\u0423\u044F\u0437\u0432\u0438\u043C\u044B\u0439
+status.cyber-io-vulnerable.description=\u041E\u0421\u0422\u041E\u0420\u041E\u0416\u041D\u041E! \u041E\u043D\u0438 \u0431\u0443\u0434\u0443\u0442 \u043C\u0435\u0440\u0442\u0432\u044B \u0432 \u043B\u044E\u0431\u043E\u0439 \u043C\u043E\u043C\u0435\u043D\u0442!
+status.cyber-io-static.name=\u0441\u043D\u0435\u0433
+status.cyber-io-static.description=\u041F\u0440\u0435\u0434\u0443\u043F\u0440\u0435\u0436\u0434\u0435\u043D\u0438\u0435! \u041E\u0431\u043D\u0430\u0440\u0443\u0436\u0435\u043D\u044B \u043F\u043E\u043C\u0435\u0445\u0438 \u0441\u0438\u0433\u043D\u0430\u043B\u0430.
 # Abilities
-ability.cyber-io-holo=The holographic-projected units using Cyberion is attenuating over time.
-ability.cyber-io-holo-force-field=Projecting auto-regenerating holographic force field.
+ability.cyber-io-holo=\u0415\u0434\u0438\u043D\u0438\u0446\u044B \u0441 \u0433\u043E\u043B\u043E\u0433\u0440\u0430\u0444\u0438\u0447\u0435\u0441\u043A\u043E\u0439 \u043F\u0440\u043E\u0435\u043A\u0446\u0438\u0435\u0439, \u0438\u0441\u043F\u043E\u043B\u044C\u0437\u0443\u044E\u0449\u0438\u0435 \u041A\u0438\u0431\u0435\u0440\u0438\u043E\u043D, \u0441\u043E \u0432\u0440\u0435\u043C\u0435\u043D\u0435\u043C \u043E\u0441\u043B\u0430\u0431\u0435\u0432\u0430\u044E\u0442.
+ability.cyber-io-holo-force-field=\u041F\u0440\u043E\u0435\u0446\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435 \u0441\u0430\u043C\u043E\u0432\u043E\u0441\u0441\u0442\u0430\u043D\u0430\u0432\u043B\u0438\u0432\u0430\u044E\u0449\u0435\u0433\u043E\u0441\u044F \u0433\u043E\u043B\u043E\u0433\u0440\u0430\u0444\u0438\u0447\u0435\u0441\u043A\u043E\u0433\u043E \u0441\u0438\u043B\u043E\u0432\u043E\u0433\u043E \u043F\u043E\u043B\u044F.
 # Settings
-setting.cyber-io-connection-opacity.name=Connection Opacity
-setting.cyber-io-connection-density.name=Connection Density
-setting.cyber-io-connection-size.name=Connection Arrow Size
-setting.cyber-io-show-link-circle.name=Show Connection Circle
-setting.cyber-io-always-show-link.name=Always Show Connection
-setting.cyber-io-show-welcome.name=Receive Message from Plum Star Inc.
-setting.cyber-io-show-update.name=Show CyberIO Update Notification
+setting.cyber-io-connection-opacity.name=\u041D\u0435\u043F\u0440\u043E\u0437\u0440\u0430\u0447\u043D\u043E\u0441\u0442\u044C \u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u0438\u044F
+setting.cyber-io-connection-opacity.description=\u041D\u0435\u043F\u0440\u043E\u0437\u0440\u0430\u0447\u043D\u043E\u0441\u0442\u044C \u0441\u0442\u0440\u0435\u043B\u043A\u0438 \u043C\u0435\u0436\u0434\u0443 \u043E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u0435\u043B\u0435\u043C \u0438 \u043F\u043E\u043B\u0443\u0447\u0430\u0442\u0435\u043B\u0435\u043C.
+setting.cyber-io-connection-density.name=\u041F\u043B\u043E\u0442\u043D\u043E\u0441\u0442\u044C \u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u0438\u044F
+setting.cyber-io-connection-density.description=\u041F\u043B\u043E\u0442\u043D\u043E\u0441\u0442\u044C \u0441\u0442\u0440\u0435\u043B\u043A\u0438 \u043C\u0435\u0436\u0434\u0443 \u043E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u0435\u043B\u0435\u043C \u0438 \u043F\u043E\u043B\u0443\u0447\u0430\u0442\u0435\u043B\u0435\u043C.
+setting.cyber-io-connection-size.name=\u0420\u0430\u0437\u043C\u0435\u0440 \u0441\u0442\u0440\u0435\u043B\u043A\u0438 \u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u0438\u044F
+setting.cyber-io-connection-size.description=\u0420\u0430\u0437\u043C\u0435\u0440 \u0441\u0442\u0440\u0435\u043B\u043A\u0438 \u043C\u0435\u0436\u0434\u0443 \u043E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u0435\u043B\u0435\u043C \u0438 \u043F\u043E\u043B\u0443\u0447\u0430\u0442\u0435\u043B\u0435\u043C.
+setting.cyber-io-show-link-circle.name=\u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u043A\u0440\u0443\u0433 \u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u0438\u044F
+setting.cyber-io-show-link-circle.description=\u041F\u043E\u043A\u0430\u0437\u044B\u0432\u0430\u0442\u044C \u043B\u0438 \u043A\u0440\u0443\u0433 \u0432\u043E\u043A\u0440\u0443\u0433 \u043E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u0435\u043B\u044F \u0438 \u043F\u043E\u043B\u0443\u0447\u0430\u0442\u0435\u043B\u044F.
+setting.cyber-io-always-show-link.name=\u0412\u0441\u0435\u0433\u0434\u0430 \u043F\u043E\u043A\u0430\u0437\u044B\u0432\u0430\u0442\u044C \u043F\u043E\u0434\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u0435
+setting.cyber-io-always-show-link.description=\u0412\u0441\u0435\u0433\u0434\u0430 \u043B\u0438 \u043E\u0442\u043E\u0431\u0440\u0430\u0436\u0430\u0435\u0442\u0441\u044F \u0441\u0442\u0440\u0435\u043B\u043A\u0430, \u043A\u043E\u0433\u0434\u0430 \u043E\u043D\u0438 \u043F\u043E\u0434\u043A\u043B\u044E\u0447\u0435\u043D\u044B.
+setting.cyber-io-show-welcome.name=\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0441\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u0435 \u043E\u0442 Plum Star Inc.
+setting.cyber-io-show-welcome.description=\u041E\u0442\u043E\u0431\u0440\u0430\u0436\u0430\u0435\u0442\u0441\u044F \u043B\u0438 \u0442\u0435\u043A\u0441\u0442 \u0430\u0440\u043E\u043C\u0430\u0442\u0430 \u043F\u0440\u0438 \u0437\u0430\u043F\u0443\u0441\u043A\u0435 \u0438\u0433\u0440\u044B.
+setting.cyber-io-show-update.name=\u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u0443\u0432\u0435\u0434\u043E\u043C\u043B\u0435\u043D\u0438\u0435 \u043E\u0431 \u043E\u0431\u043D\u043E\u0432\u043B\u0435\u043D\u0438\u0438 CyberIO
+setting.cyber-io-show-update.description=\u041F\u0440\u043E\u0432\u0435\u0440\u0438\u0442\u044C \u043D\u0430\u043B\u0438\u0447\u0438\u0435 \u043E\u0431\u043D\u043E\u0432\u043B\u0435\u043D\u0438\u0439 \u043F\u0440\u0438 \u0437\u0430\u043F\u0443\u0441\u043A\u0435 \u0438\u0433\u0440\u044B.
+setting.cyber-io-github-mirror.button=\u0417\u0435\u0440\u043A\u0430\u043B\u043E GitHub
+setting.cyber-io-github-mirror.button-tooltip=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u0442\u0435 \u0437\u0435\u0440\u043A\u0430\u043B\u043E GitHub.\n\u0418\u0441\u043F\u043E\u043B\u044C\u0437\u0443\u0439\u0442\u0435 \u0435\u0433\u043E, \u0442\u043E\u043B\u044C\u043A\u043E \u0435\u0441\u043B\u0438 \u0443 \u0432\u0430\u0441 \u043D\u0435\u0442 \u0434\u043E\u0441\u0442\u0443\u043F\u0430 \u043A GitHub \u0432 \u043E\u0431\u044B\u0447\u043D\u043E\u043C \u0440\u0435\u0436\u0438\u043C\u0435.
+setting.cyber-io-github-mirror.dialog=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 URL-\u0430\u0434\u0440\u0435\u0441 \u0437\u0435\u0440\u043A\u0430\u043B\u0430 GitHub
+setting.cyber-io-github-mirror.failed=\u041D\u0435\u0432\u043E\u0437\u043C\u043E\u0436\u043D\u043E \u043F\u0440\u043E\u0432\u0435\u0440\u0438\u0442\u044C {0}, \u043F\u043E\u0442\u043E\u043C\u0443 \u0447\u0442\u043E {1}
+setting.cyber-io-github-mirror.success=\u041F\u0440\u043E\u0432\u0435\u0440\u043A\u0430 \u043F\u0440\u043E\u0448\u043B\u0430 \u0443\u0441\u043F\u0435\u0448\u043D\u043E!\n\u0417\u0435\u0440\u043A\u0430\u043B\u043E GitHub \u0443\u0441\u0442\u0430\u043D\u043E\u0432\u043B\u0435\u043D\u043E \u043A\u0430\u043A {0}.
+setting.cyber-io-github-mirror.reset=\u0417\u0435\u0440\u043A\u0430\u043B\u043E GitHub \u0431\u044B\u043B\u043E \u0441\u0431\u0440\u043E\u0448\u0435\u043D\u043E \u043A\u0430\u043A {0}.
+setting.cyber-io-github-mirror.field-tooltip=\u041D\u0430\u0436\u043C\u0438\u0442\u0435 \u043A\u043D\u043E\u043F\u043A\u0443 \u00AB\u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C\u00BB, \u0447\u0442\u043E\u0431\u044B \u043F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044C \u044D\u0442\u043E\u0442 URL.\n\
+  \u041E\u0447\u0438\u0441\u0442\u0438\u0442\u0435 \u044D\u0442\u043E \u0438 \u0441\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u0435, \u0447\u0442\u043E\u0431\u044B \u0441\u0431\u0440\u043E\u0441\u0438\u0442\u044C URL-\u0430\u0434\u0440\u0435\u0441.
+setting.cyber-io-github-mirror.save-tooltip=\u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u043F\u043E\u0441\u043B\u0435 \u043F\u0440\u043E\u0432\u0435\u0440\u043A\u0438
+setting.cyber-io-github-mirror.cancel-tooltip=\u041F\u0443\u0441\u0442\u0438\u0442\u0435 \u0432\u0432\u043E\u0434.
 # UI
 ui.cyber-io.mouse-position.tile=Tile:{0},{1}
 ui.cyber-io.mouse-position.build=Build:{0},{1}
 ui.cyber-io.mouse-position.world=World:{0},{1}
 # Heimdall
-heimdall.damage.name=Damage
-heimdall.range.name=Range
-heimdall.wave-speed.name=Wave Speed
-heimdall.wave-width.name=Wave Width
-heimdall.reload-time.name=Reload
-heimdall.max-brain-wave-num.name=Wave Number
-heimdall.control-line.name=Control
-heimdall.force-field-max.name=Shield
-heimdall.force-field-regen.name=Shield Regeneration
-heimdall.force-field-radius.name=Shield Range
-heimdall.force-field-restore-time.name=Shield Reload
+heimdall.damage.name=\u0443\u0449\u0435\u0440\u0431
+heimdall.range.name=\u0414\u0438\u0430\u043F\u0430\u0437\u043E\u043D
+heimdall.wave-speed.name=\u0421\u043A\u043E\u0440\u043E\u0441\u0442\u044C \u0432\u043E\u043B\u043D\u044B
+heimdall.wave-width.name=\u0428\u0438\u0440\u0438\u043D\u0430 \u0432\u043E\u043B\u043D\u044B
+heimdall.reload-time.name=\u043F\u0435\u0440\u0435\u0437\u0430\u0440\u044F\u0436\u0430\u0442\u044C
+heimdall.max-brain-wave-num.name=\u0412\u043E\u043B\u043D\u043E\u0432\u043E\u0435 \u0447\u0438\u0441\u043B\u043E
+heimdall.control-line.name=\u0443\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u0438\u0435
+heimdall.force-field-max.name=\u0449\u0438\u0442
+heimdall.force-field-regen.name=\u0412\u043E\u0441\u0441\u0442\u0430\u043D\u043E\u0432\u043B\u0435\u043D\u0438\u0435 \u0449\u0438\u0442\u0430
+heimdall.force-field-radius.name=\u0414\u0438\u0430\u043F\u0430\u0437\u043E\u043D \u0449\u0438\u0442\u0430
+heimdall.force-field-restore-time.name=\u041F\u0435\u0440\u0435\u0437\u0430\u0440\u044F\u0434\u043A\u0430 \u0449\u0438\u0442\u0430
