[AR] Fixed problem on chinese localization.

--- a/assets/welcomes/zh_CN.properties
+++ b/assets/welcomes/zh_CN.properties
@@ -5,7 +5,7 @@ Default=If you saw this page, it might mean you are using the CyberIO for test o
 Default.read=I see
 #---Do not translate---
 #Standard
-welcome.title=\u6B22\u8FCE\u6E38\u73A9 Cyber IO {0}.
+welcome=\u6B22\u8FCE\u6E38\u73A9 Cyber IO {0}.
 Discord=\u6709\u65F6\uFF0C\u5F53\u4F60\u72EC\u81EA\u6F2B\u6B65\u592A\u7A7A\uFF0C\u53EF\u80FD\u4F1A\u60F3\u5BFB\u627E\u4E00\u4E2A\u793E\u533A\u56E2\u961F\n\
 \u4F60\u53EF\u4EE5\u5206\u4EAB\u4F60\u7684\u7ECF\u9A8C\u6216\u8005\u95EE\u4E9B\u95EE\u9898\uFF08\u5F53\u7136\u4F60\u7528\u4E0D\u7740\u95EEbug\uFF09\u3002\n\
 \u5C3D\u7BA1\u201C\u98DE\u58F0\u201D\u4FE1\u53F7\u4E0D\u597D\uFF0C\u4E16\u754C\u4E0A\u4ECD\u7136\u6709\u4EBA\u5728\u60E6\u8BB0\u7740\u4F60\u2014\u2014Plum Star\u7684Discord\u3002\n\
