[AR] Added checking update manually

--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -129,7 +129,7 @@ control.cyber-io.yes=\u662F
 control.cyber-io.no=\u5426
 control.cyber-io.ok=OK
 control.cyber-io.update-mod.success=CyberIO {0} updated successfully. Please restart the game to reload CyberIO.
-control.cyber-io.update-mod.failed=Failed to update CyberIO {0} because {1}.
+control.cyber-io.update-mod.failed=Failed to update CyberIO because {0}.
 # StatusEffects
 status.cyber-io-infected.name=\u6C61\u67D3
 status.cyber-io-infected.description=\u6C61\u67D3\u4F1A\u6839\u636E\u5F53\u524D\u8840\u91CF\u503C\u964D\u4F4E\u751F\u547D
