--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -129,7 +129,7 @@ control.cyber-io.yes=\u662F
 control.cyber-io.no=\u5426
 control.cyber-io.ok=OK
 control.cyber-io.update-mod.success=CyberIO {0} updated successfully. Please restart the game to reload CyberIO.
-control.cyber-io.update-mod.failed=Failed to update CyberIO {0} because {1}.
+control.cyber-io.update-mod.failed=Failed to update CyberIO because {0}.
 # StatusEffects
 status.cyber-io-infected.name=\u611F\u67D3
 status.cyber-io-infected.description=\u76EE\u6A19\u6703\u6839\u64DA\u6700\u5927\u751F\u547D\u503C\u4F86\u53D7\u5230\u50B7\u5BB3\u3002
