Moved BundleH.kt underdrive:(stat) speed increase, power generation stream host/server:(stat/code) power use depends on connection number Deleter:(stat) bullet execution distributor:support item turret

--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -26,7 +26,7 @@ block.cyber-io-cloud.description=\u5C07\u4F60\u7684\u500B\u4EBA\u6578\u64DA\u5B5
 block.cyber-io-hyper-overdrive-sphere.name=\u8D85\u5149\u901F\u534A\u7403
 block.cyber-io-hyper-overdrive-sphere.description=\u8D85\u5149\u901F\uFF01\uFF01\uFF01
 block.cyber-io-deleter.name=\u6839\u9664\u8005
-block.cyber-io-deleter.description=\u5411\u5916\u8F3B\u5C04\u51FA\u96E2\u5B50\u5149\u6CE2\uFF0C\u9020\u6210\u7BC4\u570D\u7A7F\u900F\u50B7\u5BB3\uFF0C\u8840\u91CF\u4F4E\u7684\u6575\u4EBA\u5C07\u6703\u88AB\u6D88\u6EC5\u3002
+block.cyber-io-deleter.description=\u5411\u5916\u8F3B\u5C04\u51FA\u96E2\u5B50\u5149\u6CE2\uFF0C\n\u9020\u6210\u7BC4\u570D\u7A7F\u900F\u50B7\u5BB3\uFF0C\n\u8840\u91CF\u4F4E\u7684\u6575\u4EBA\u5C07\u6703\u88AB\u6D88\u6EC5\u3002
 block.cyber-io-TMTRAINER.name=TMTRAINER
 block.cyber-io-TMTRAINER.description=TMTRAINER
 block.cyber-io-prism.name=\u68F1\u93E1
