Stream Server will display bars for each liquid it contains.

--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -123,7 +123,7 @@ cyber-io.percent.plus=+{0}%
 cyber-io.percent.minus=-{0}%
 cyber-io.value.plus=+{0}
 cyber-io.value.minus=-{0}
-cyber-io.adjustable-overdrive.speed-increase=\u4ECE +{0}% \u5230 +{1}%
+cyber-io.speed-increase.range=\u4ECE {0}% \u5230 {1}%
 # Controls
 control.cyber-io.yes=\u662F
 control.cyber-io.no=\u5426
