--- a/assets/bundles/bundle_ru.properties
+++ b/assets/bundles/bundle_ru.properties
@@ -123,7 +123,7 @@ cyber-io.percent.plus=+{0}%
 cyber-io.percent.minus=-{0}%
 cyber-io.value.plus=+{0}
 cyber-io.value.minus=-{0}
-cyber-io.adjustable-overdrive.speed-increase=+{0}% \u043A +{1}%
+cyber-io.speed-increase.range={0}% \u043A {1}%
 # Controls
 control.cyber-io.yes=Yes
 control.cyber-io.no=No
