--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -123,7 +123,7 @@ cyber-io.percent.plus=+{0}%
 cyber-io.percent.minus=-{0}%
 cyber-io.value.plus=+{0}
 cyber-io.value.minus=-{0}
-cyber-io.adjustable-overdrive.speed-increase=+{0}% to +{1}%
+cyber-io.speed-increase.range={0}% to {1}%
 # Controls
 control.cyber-io.yes=\u662F
 control.cyber-io.no=\u5426
