Moved classes preparing for the data network. Added close listener into welcome dialog preventing from unclose-able dialog in mobile. Changed the indicator of wireless tower.  Suffixed some drawers in G with -Breath.

--- a/assets/bundles/bundle_ja.properties
+++ b/assets/bundles/bundle_ja.properties
@@ -56,7 +56,7 @@ block.cyber-io-stealth.description=******\u30A2\u30AF\u30BB\u30B9\u62D2\u5426***
 block.cyber-io-aqua-cyberion.name=Cyberion
 block.cyber-io-aqua-cyberion.description=\u4E00\u822C\u7684\u306A\u6DB2\u4F53\u3002
 block.cyber-io-wireless-tower.name=\u30EF\u30A4\u30E4\u30EC\u30B9\u30BF\u30EF\u30FC
-block.cyber-io-wireless-tower.description=\u6587\u5B57\u901A\u308A\u30D7\u30E9\u30E0\u30B9\u30BF\u30FC\u793E\u306B\u3088\u3063\u3066\u4F9B\u7D66\u3002
+block.cyber-io-wireless-tower.details=\u6587\u5B57\u901A\u308A\u30D7\u30E9\u30E0\u30B9\u30BF\u30FC\u793E\u306B\u3088\u3063\u3066\u4F9B\u7D66\u3002
 block.cyber-io-wireless-tower.stats.power-use=\u96FB\u529B\u4F7F\u7528\u91CF\u306B\u57FA\u3065\u304D\u307E\u3059\u3002
 block.cyber-io-data-miner.name=\u30C7\u30FC\u30BF\u30DE\u30A4\u30CB\u30F3\u30B0
 block.cyber-io-data-miner.description=\uFF21\uFF29\u3067\u672C\u7269\u306E\u30DF\u30CD\u30E9\u30EB\u3092\u62BD\u51FA\u3057\u307E\u3059\u3002 \u6B64\u308C\u3092\u898B\u3064\u3051\u305F\u3089\u3001\u55DA\u547C\u3001\u8CB4\u65B9\u306F\u3053\u306E\u30D6\u30ED\u30C3\u30AF\u3092\u4E88\u7D04\u3057\u307E\u3057\u305F\u3002
