--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -56,7 +56,7 @@ block.cyber-io-stealth.description=******\u6743\u9650\u53D7\u9650*******
 block.cyber-io-aqua-cyberion.name=\u8D5B\u535A\u9F99
 block.cyber-io-aqua-cyberion.description=\u666E\u666E\u901A\u901A\u7684\u6DB2\u4F53
 block.cyber-io-wireless-tower.name=\u65E0\u7EBF\u4FE1\u53F7\u5854
-block.cyber-io-wireless-tower.description=\u57FA\u4E8EPlum Star\u661F\u79D1\u6280
+block.cyber-io-wireless-tower.details=\u57FA\u4E8EPlum Star\u661F\u79D1\u6280
 block.cyber-io-wireless-tower.stats.power-use=Based on the amount of power use.
 block.cyber-io-data-miner.name=\u6570\u636E\u6316\u6398\u673A
 block.cyber-io-data-miner.description=\u901A\u8FC7AI\u6280\u672F\u63D0\u53D6\u771F\u6B63\u7684\u77FF\u7269\uFF0C\u627E\u5230\u4E86\u52A1\u5FC5\u8981\u597D\u597D\u7559\u5B58
