--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -56,7 +56,7 @@ block.cyber-io-stealth.description=******Permission Denied*******
 block.cyber-io-aqua-cyberion.name=Cyberion
 block.cyber-io-aqua-cyberion.description=A common liquid.
 block.cyber-io-wireless-tower.name=Wireless Tower
-block.cyber-io-wireless-tower.description=Powered by Plum Star Inc. literally.
+block.cyber-io-wireless-tower.details=Powered by Plum Star Inc. literally.
 block.cyber-io-wireless-tower.stats.power-use=Based on the amount of power use.
 block.cyber-io-data-miner.name=Data Miner
 block.cyber-io-data-miner.description=Extract the real mineral by AI. If you find this, oh, you reserved this block.
