--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -19,14 +19,17 @@ block.cyber-io-holo-wall-large.name=Велика голограма стіни
 block.cyber-io-holo-wall-large.description=Голографічна стіна від «Плюм Стар Інкорпорейшн», що з часом автоматично відновлює здоров’я.
 block.cyber-io-anti-virus.name=Антивірус
 block.cyber-io-anti-virus.description=Якщо ви не можете грати в цю гру, спробуйте закрити антивірус.
-block.cyber-io-underdrive-projector.name=Underdrive проєктор
+block.cyber-io-underdrive-projector.name=Послаблювальний проєктор
+block.cyber-io-underdrive-projector.stats.power-gen={0}, коли поглинає {1} блоків
 block.cyber-io-underdrive-projector.description=Сповільнює навколишні машини.
-block.cyber-io-cloud.name=Хмара321 287
+block.cyber-io-cloud.name=Хмара
 block.cyber-io-cloud.description=Зберігає ваші дані в хмарі на основі LiplumCloud. Ви можете отримати до них доступ, де б вони не були!
 block.cyber-io-hyper-overdrive-sphere.name=Надшвидка сфера
 block.cyber-io-hyper-overdrive-sphere.description=СВІТЛОВА ШВИДКІСТЬ!!!
 block.cyber-io-deleter.name=Видаляльник
 block.cyber-io-deleter.description=Випромінює голографічні хвилі, які мають корпускулярно-хвильовий дуалізм. Властивості хвилі: б'є по області. Властивості частинок: страчає ворогів.
+block.cyber-io-deleter.stats.bullet.damage=[stat]{0} + {1}% втраченого здоров'я [lightgray] шкоди
+block.cyber-io-deleter.stats.bullet.execution=Вбиває, коли здоров'я <= [stat]{0}%[lightgray]
 block.cyber-io-TMTRAINER.name=TMTRAINER
 block.cyber-io-TMTRAINER.description=TMTRAINER
 block.cyber-io-prism.name=Призма
@@ -42,9 +45,11 @@ block.cyber-io-smart-unloader.stats.power-use=Залежно від кілько
 block.cyber-io-stream-client.name=Клієнт потоку
 block.cyber-io-stream-client.description=Клієнти можуть отримати миттєву рідину, але обмежені швидкістю мережі.
 block.cyber-io-stream-host.name=Хост потоку
-block.cyber-io-stream-host.description= Хостинг вашого потоку. Кожен клієнт може отримати вашу трансляцію, якщо захоче.
+block.cyber-io-stream-host.description=Хостинг вашого потоку. Кожен клієнт може отримати вашу трансляцію, якщо захоче.
+block.cyber-io-stream-host.stats.power-use=Залежно від кількості підключень.
 block.cyber-io-stream-server.name=Сервер потоку
 block.cyber-io-stream-server.description=Сервер прямої трансляції, на якому ви можете поділитися особистим досвідом гри Mindustry! Насолоджуйтеся!
+block.cyber-io-stream-server.stats.power-use=Залежно від кількості підключень хост/клієнт.
 block.cyber-io-jammer.name=Глушник
 block.cyber-io-jammer.description=Пристрої глушіння. УВАГА! Ваш мобільний телефон може бути заглушено!
 block.cyber-io-cyberion-mixer.name=Змішувач кіберію
@@ -63,6 +68,7 @@ block.cyber-io-data-miner.description=Видобувайте справжні м
 block.cyber-io-heimdall.name=Геймдалль
 block.cyber-io-heimdall.description=Поєднання біотехнологій, науки про мозок,  використання інтерфейсу Брейн–комп’ютера та нейронної мережу, може повністю змінити мислення ворога.
 block.cyber-io-heimdall.details=Артефакт належить «Нью Брейнз Корпорейшн».
+block.cyber-io-heimdall.stats.power-use=На основі компонентів поліпшення.
 block.cyber-io-heimdall-eye.name=Око Геймдалла
 block.cyber-io-heimdall-eye.description=Знімний компонент, розроблений для поліпшення Геймдалла. Око може дивитися на будь-кого, кого він вважає ворогом.
 block.cyber-io-heimdall-eye.details=Компонент поліпшення розроблений «Нью Брейнз Корпорейшн».
@@ -109,7 +115,7 @@ bar.cyber-io.linked.no=Не з'єднано
 bar.cyber-io.receiver=Отримувач: {0}
 bar.cyber-io.sender=Відправник: {0}
 bar.cyber-io.ani-state-last=Останнє: {0}
-bar.cyber-io.null=Null
+bar.cyber-io.null=Нічого
 bar.cyber-io.client=Клієнт: {0}
 bar.cyber-io.host=Хост: {0}
 bar.cyber-io.rest-life=Лишилось жити
@@ -128,6 +134,7 @@ cyber-io.speed-increase.range=з {0}% до {1}%
 control.cyber-io.yes=Так
 control.cyber-io.no=Ні
 control.cyber-io.ok=Гаразд
+control.cyber-io.enable=Увімкнути {0}
 control.cyber-io.validate=Підтвердити
 control.cyber-io.update-mod.success=CyberIO {0} оновлено успішно. Будь ласка, перезапустіть гру для перезапуску CyberIO.
 control.cyber-io.update-mod.failed=Не вдалося оновити CyberIO через {0}.
@@ -163,25 +170,41 @@ setting.cyber-io-github-mirror.failed=Не вдається підтвердит
 setting.cyber-io-github-mirror.success=Підтвердження успішне!\nДзеркало GitHub було встановлено як {0}.
 setting.cyber-io-github-mirror.reset=Дзеркало GitHub було встановлено як  {0}.
 setting.cyber-io-github-mirror.field-tooltip=Натисіть кнопку збережння, щоби підтвердити цю адресу.\n\
-  Очистіть це і збережіть, щоб очистити адресу.
 setting.cyber-io-github-mirror.save-tooltip=Зберегти після підтвердження
 setting.cyber-io-github-mirror.cancel-tooltip=Скасувати введення.
 setting.cyber-io-check-update.button=Перевірити оновлення
 setting.cyber-io-check-update.already-latest=У вас остання версія Cyber IO.
 setting.cyber-io-check-update.not-support=Перевірка оновлень не підтримується
+setting.cyber-io-advanced-function.title=Передові функції
+# Advanced Function
+advanced.cyber-io.map-cleaner=Очищувач мапи
+advanced.cyber-io.map-cleaner.description=Увімкнувши очищувач мапи, ви знайдете спеціальну кнопку зі схожою назвою у налаштуваннях, коли ви граєте у локальній мапі. Натиснувши на кнопку, ви видалите весь зміст з Cyber IO на цій мапі.
 # UI
 ui.cyber-io.mouse-position.tile=Плитка:{0},{1}
 ui.cyber-io.mouse-position.build=Побудова:{0},{1}
 ui.cyber-io.mouse-position.world=Світ:{0},{1}
 # Heimdall
 heimdall.damage.name=Шкода
+heimdall.damage.description=Яку шкоду може завдати мозкова хвиля
 heimdall.range.name=Дальність
+heimdall.range.description=Як далеко може досягати мозкова хвиля
 heimdall.wave-speed.name=Швидкість хвилі
+heimdall.wave-speed.description=Як швидко може рухатися мозкова хвиля
 heimdall.wave-width.name=Ширина хвиль
+heimdall.wave-width.description=Наскільки широка мозкова хвиля.
 heimdall.reload-time.name=Перезарядка
+heimdall.reload-time.description=Як довго між двома хвилями.
 heimdall.max-brain-wave-num.name=Кількість хвиль
+heimdall.max-brain-wave-num.description=Скільки хвиль може існувати одночасно
 heimdall.control-line.name=Контроль
+heimdall.control-line.description=Який відсоток здоров'я мозкової хвилі може контролювати ціль
 heimdall.force-field-max.name=Щит
+heimdall.force-field-max.description=Максимальна міцність щита, якщо він існує.
 heimdall.force-field-regen.name=Відновлення щита
+heimdall.force-field-regen.description=Швидкість відновлення щита.
 heimdall.force-field-radius.name=Дальність щита
+heimdall.force-field-radius.description=Максимальна дальність щита, де він здатний захистити.
 heimdall.force-field-restore-time.name=Перезарядка щита
+heimdall.force-field-restore-time.description=Як довго щит буде підготуватися.
+heimdall.power-use.name=Використання енергії
+heimdall.power-use.description=Використання енергії щосекунди.
