--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -138,6 +138,7 @@ setting.cyber-io-connection-size.name=Connection Arrow Size
 setting.cyber-io-show-link-circle.name=Show Connection Circle
 setting.cyber-io-show-welcome.name=\u4ECEPlum Star\u516C\u53F8\u83B7\u5F97\u6570\u636E
 setting.cyber-io-show-update.name=\u663E\u793ACyberIO\u66F4\u65B0\u63D0\u793A
+# Extra Settings
 # Heimdall
 heimdall.damage.name=\u4F24\u5BB3
 heimdall.range.name=\u8303\u56F4
