--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -138,6 +138,7 @@ setting.cyber-io-show-link-circle.name=Show Connection Circle
 setting.cyber-io-always-show-link.name=Always Show Connection
 setting.cyber-io-show-welcome.name=Receive Message from Plum Star Inc.
 setting.cyber-io-show-update.name=Show CyberIO Update Notification
+# Extra Settings
 # Heimdall
 heimdall.damage.name=Damage
 heimdall.range.name=Range
