--- a/assets/bundles/bundle_ja.properties
+++ b/assets/bundles/bundle_ja.properties
@@ -134,6 +134,7 @@ setting.cyber-io-connection-size.name=\u63A5\u7D9A\u77E2\u5370\u306E\u30B5\u30A4
 setting.cyber-io-show-link-circle.name=\u63A5\u7D9A\u30B5\u30FC\u30AF\u30EB\u3092\u8868\u793A
 setting.cyber-io-always-show-link.name=\u5E38\u306B\u63A5\u7D9A\u3092\u8868\u793A\u3059\u308B
 setting.cyber-io-show-welcome.name=\u300APlum Star Inc.\u300B\u304B\u3089\u306E\u30E1\u30C3\u30BB\u30FC\u30B8\u3092\u53D7\u4FE1\u3057\u307E\u3059\u3002
+# Extra Settings
 setting.cyber-io-show-update.name=CyberIO \u30A2\u30C3\u30D7\u30C7\u30FC\u30C8\u901A\u77E5\u3092\u8868\u793A\u3059\u308B
 # Heimdall
 heimdall.damage.name=\u30C0\u30E1\u30FC\u30B8\u8005
