Localized random name of TMTRAINER

--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -121,6 +121,7 @@ bar.cyber-io.rest-resurrect=\u041B\u0438\u0448\u0438\u043B\u043E\u0441\u044C \u0
 cyber-io.cost.second=\u0441\u0435\u043A.
 cyber-io.cost.minute=\u0445\u0432.
 cyber-io.speed-increase.range=\u0437 {0}% \u0434\u043E {1}%
+cyber-io.random-name=\u0410\u0411\u0412\u0413\u0490\u0414\u0415\u0404\u0416\u0417\u0418\u0406\u0407\u0419\u041A\u041B\u041C\u041D\u041E\u041F\u0420\u0421\u0422\u0423\u0424\u0425\u0426\u0427\u0428\u0429\u042C\u042E\u042F
 # Controls
 control.cyber-io.enable=\u0423\u0432\u0456\u043C\u043A\u043D\u0443\u0442\u0438 {0}
 control.cyber-io.validate=\u041F\u0456\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u0438
