--- a/assets/bundles/bundle_ja.properties
+++ b/assets/bundles/bundle_ja.properties
@@ -114,6 +114,7 @@ bar.cyber-io.rest-resurrect=Rest Life: {0} \u6642\u9593
 cyber-io.cost.second=\u79D2
 cyber-io.cost.minute=\u6642
 cyber-io.speed-increase.range=+{0}\uFF05 to +{1}\uFF05
+cyber-io.random-name=\u3042\u3044\u3046\u3048\u304A\u304B\u304D\u304F\u3051\u3053\u304C\u304E\u3050\u3052\u3054\u3055\u3057\u3059\u305B\u305D\u3056\u3058\u305A\u305C\u305E\u305F\u3061\u3064\u3066\u3068\u3060\u3062\u3065\u3067\u3069\u306A\u306B\u306C\u306D\u306E\u306F\u3072\u3075\u3078\u307B\u3070\u3073\u3076\u3079\u307C\u3071\u3074\u3077\u307A\u307D\u307E\u307F\u3080\u3081\u3082\u3084\u3086\u3088\u3089\u308A\u308B\u308C\u308D\u308F\u3092\u3093\u30A2\u30A4\u30A6\u30A8\u30AA\u30AB\u30AD\u30AF\u30B1\u30B3\u30AC\u30AE\u30B0\u30B2\u30B4\u30B5\u30B7\u30B9\u30BB\u30BD\u30B6\u30B8\u30BA\u30BC\u30BE\u30BF\u30C1\u30C4\u30C6\u30C8\u30C0\u30C2\u30C5\u30C7\u30C9\u30CA\u30CB\u30CC\u30CD\u30CE\u30CF\u30D2\u30D5\u30D8\u30DB\u30D0\u30D3\u30D6\u30D9\u30DC\u30D1\u30D4\u30D7\u30DA\u30DD\u30DE\u30DF\u30E0\u30E1\u30E2\u30E4\u30E6\u30E8\u30E9\u30EA\u30EB\u30EC\u30ED\u30EF\u30F2\u30F3
 # Controls
 # StatusEffects
 status.cyber-io-infected.name=\u611F\u67D3\u3057\u305F
