--- a/assets/bundles/bundle_ru.properties
+++ b/assets/bundles/bundle_ru.properties
@@ -115,6 +115,7 @@ bar.cyber-io.rest-resurrect=\u043E\u0441\u0442\u0430\u043B\u044C\u043D\u043E\u04
 cyber-io.cost.second=sec
 cyber-io.cost.minute=min
 cyber-io.speed-increase.range={0}% \u043A {1}%
+cyber-io.random-name=\u0410\u0411\u0412\u0413\u0414\u0415\u0401\u0416\u0417\u0418\u0419\u041A\u0412\u041B\u041C\u041D\u041E\u041F\u0420\u0421\u0422\u0423\u0424\u0425\u0426\u0427\u0428\u0429\u044B\u044C\u042D\u042E\u042F
 # Controls
 control.cyber-io.update-mod.success=CyberIO {0} \u0443\u0441\u043F\u0435\u0448\u043D\u043E \u043E\u0431\u043D\u043E\u0432\u043B\u0435\u043D. \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u043F\u0435\u0440\u0435\u0437\u0430\u043F\u0443\u0441\u0442\u0438\u0442\u0435 \u0438\u0433\u0440\u0443, \u0447\u0442\u043E\u0431\u044B \u043F\u0435\u0440\u0435\u0437\u0430\u0433\u0440\u0443\u0437\u0438\u0442\u044C CyberIO.
 control.cyber-io.update-mod.failed=\u041D\u0435 \u0443\u0434\u0430\u043B\u043E\u0441\u044C \u043E\u0431\u043D\u043E\u0432\u0438\u0442\u044C CyberIO \u0438\u0437-\u0437\u0430 {0}.
