--- a/assets/bundles/bundle_ja.properties
+++ b/assets/bundles/bundle_ja.properties
@@ -86,7 +86,6 @@ unit.cyber-io-holo-supporter.description=Holo Projector \u306B\u3088\u3063\u3066
 bar.cyber-io.generation=\u4E16\u4EE3\uFF1A{0}
 bar.cyber-io.slow-down=\u30D6\u30FC\u30B9\u30C8\uFF1A-{0}%
 bar.cyber-io.efficiency-absorption=\uFF25\uFF26\uFF26\u5438\u53CE\uFF1A{0}\uFF05
-bar.cyber-io.team=\u30C1\u30FC\u30E0\uFF1A{0}
 bar.cyber-io.alpha=\u30A2\u30EB\u30D5\u30A1\uFF1A{0}
 bar.cyber-io.range=\u7BC4\u56F2\uFF1A{0} \u30D6\u30ED\u30C3\u30AF
 bar.cyber-io.cool-down=\u30AF\u30FC\u30EB\u30C0\u30A6\u30F3\uFF1A{0}\u79D2
@@ -94,16 +93,12 @@ bar.cyber-io.is-alive=\u751F\u304D\u3066\u3044\u308B\uFF1A{0}
 bar.cyber-io.is-projecting=\u6295\u5F71\u3057\u3066\u3044\u307E\u3059\uFF1A{0}
 bar.cyber-io.rest-restore=Rest Restore\uFF1A{0}
 bar.cyber-io.charge=\u5145\u96FB\uFF1A{0}\u79D2
-bar.cyber-io.is-asleep=\u7720\u3063\u3066\u3044\u307E\u3059\uFF1A{0}
 bar.cyber-io.last-damaged=\u6700\u7D42\u30C0\u30E1\u30FC\u30B8\uFF1A{0}\u79D2
-bar.cyber-io.progress=\u9032\u6357\uFF1A{0}\uFF05
 bar.cyber-io.prism=\u30D7\u30EA\u30BA\u30E0
-bar.cyber-io.prism.pl=\u30D7\u30EA\u30BA\u30E0
 bar.cyber-io.linked=\u30EA\u30F3\u30AF
-bar.cyber-io.linked.no=\u30EA\u30F3\u30AF\u7121\u3057
+bar.cyber-io.unlinked=\u30EA\u30F3\u30AF\u7121\u3057
 bar.cyber-io.receiver=\u53D7\u4FE1\u8005\uFF1A{0}
 bar.cyber-io.sender=\u9001\u4FE1\u8005\uFF1A{0}
-bar.cyber-io.ani-state-last=\u6700\u5F8C\uFF1A{0}
 bar.cyber-io.null=\u30CC\u30EB
 bar.cyber-io.client=\u30AF\u30E9\u30A4\u30A2\u30F3\u30C8\uFF1A{0}
 bar.cyber-io.host=\u30DB\u30B9\u30C8\uFF1B{0}
