--- a/assets/bundles/bundle_ru.properties
+++ b/assets/bundles/bundle_ru.properties
@@ -88,23 +88,18 @@ unit.cyber-io-holo-supporter.description=\u041F\u043E\u0434\u0434\u0435\u0440\u0
 bar.cyber-io.generation=\u041F\u043E\u043A\u043E\u043B\u0435\u043D\u0438\u0435 {0}
 bar.cyber-io.slow-down=\u0443\u0432\u0435\u043B\u0438\u0447\u0435\u043D\u0438\u0435: -{0}%
 bar.cyber-io.efficiency-absorption=\u041F\u043E\u0433\u043B\u043E\u0449\u0435\u043D\u0438\u0435: {0}%
-bar.cyber-io.team=\u041A\u043E\u043C\u0430\u043D\u0434\u0430: {0}
 bar.cyber-io.range=\u0414\u0438\u0430\u043F\u0430\u0437\u043E\u043D: {0} \u0431\u043B\u043E\u043A\u0438
 bar.cyber-io.cool-down=CD: {0}s
 bar.cyber-io.is-alive=\u0416\u0438\u0432\u043E\u0439: {0}
 bar.cyber-io.is-projecting=\u043F\u0440\u043E\u0435\u0446\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435: {0}
 bar.cyber-io.rest-restore=\u043E\u0442\u0434\u044B\u0445 \u0432\u043E\u0441\u0441\u0442\u0430\u043D\u043E\u0432\u043B\u0435\u043D\u0438\u0435: {0}
 bar.cyber-io.charge=\u0437\u0430\u0440\u044F\u0434: {0}s
-bar.cyber-io.is-asleep=\u0441\u043F\u044F\u0449\u0438\u0439: {0}
 bar.cyber-io.last-damaged=Last Damage: {0}s
-bar.cyber-io.progress=\u043F\u0440\u043E\u0433\u0440\u0435\u0441\u0441: {0}%
 bar.cyber-io.prism=\u043F\u0440\u0438\u0437\u043C\u0430
-bar.cyber-io.prism.pl=\u043F\u0440\u0438\u0437\u043C\u044B
 bar.cyber-io.linked=\u0421\u0432\u044F\u0437\u0430\u043D\u043D\u044B\u0439
-bar.cyber-io.linked.no=\u043D\u0435\u0442 \u0441\u0432\u044F\u0437\u0438
+bar.cyber-io.unlinked=\u043D\u0435\u0442 \u0441\u0432\u044F\u0437\u0438
 bar.cyber-io.receiver=\u043F\u0440\u0438\u0435\u043C\u043D\u0438\u043A: {0}
 bar.cyber-io.sender=\u043E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u0435\u043B\u044C: {0}
-bar.cyber-io.ani-state-last=Last: {0}
 bar.cyber-io.null=\u043D\u0443\u043B\u0435\u0432\u043E\u0439
 bar.cyber-io.client=\u043A\u043B\u0438\u0435\u043D\u0442: {0}
 bar.cyber-io.host=\u0425\u043E\u0437\u044F\u0438\u043D: {0}
