--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -88,20 +88,16 @@ unit.cyber-io-holo-supporter.description=\u7531\u5168\u606F\u6295\u5F71\u4EEA\u7
 bar.cyber-io.generation=\u751F\u6210 {0}
 bar.cyber-io.slow-down=\u901F\u5EA6\u500D\u7387: -{0}%
 bar.cyber-io.efficiency-absorption=\u6548\u7387\u5438\u6536: {0}%
-bar.cyber-io.team=\u961F\u4F0D\uFF1A {0}
 bar.cyber-io.range=\u8303\u56F4\uFF1A{0} \u4E2A\u65B9\u5757
 bar.cyber-io.cool-down=\u51B7\u5374\uFF1A {0}s
 bar.cyber-io.is-alive=\u5B58\u6D3B\uFF1A {0}
 bar.cyber-io.is-projecting=\u6295\u5F71\uFF1A{0}
 bar.cyber-io.rest-restore=\u5269\u4F59\u590D\u539F\uFF1A{0}
 bar.cyber-io.charge=\u5145\u80FD\uFF1A {0}s
-bar.cyber-io.is-asleep=\u7761\u7720\uFF1B {0}
 bar.cyber-io.last-damaged=\u4E0A\u6B21\u4F24\u5BB3\uFF1A {0}s
-bar.cyber-io.progress=\u8FDB\u7A0B\uFF1A{0}%
 bar.cyber-io.prism=\u68F1\u955C
-bar.cyber-io.prism.pl=\u68F1\u955C
 bar.cyber-io.linked=\u5DF2\u8FDE\u63A5
-bar.cyber-io.linked.no=\u672A\u8FDE\u63A5
+bar.cyber-io.unlinked=\u672A\u8FDE\u63A5
 bar.cyber-io.receiver=\u63A5\u6536\u7AEF\uFF1A {0}
 bar.cyber-io.sender=\u53D1\u9001\u7AEF\uFF1A {0}
 bar.cyber-io.ani-state-last=\u6301\u7EED\u65F6\u95F4 {0}
