--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -94,23 +94,18 @@ unit.cyber-io-holo-supporter.description=\u041F\u0456\u0434\u0442\u0440\u0438\u0
 bar.cyber-io.generation=\u041F\u043E\u043A\u043E\u043B\u0456\u043D\u043D\u044F {0}
 bar.cyber-io.slow-down=\u041F\u0440\u0438\u0441\u043A\u043E\u0440\u0435\u043D\u043D\u044F: -{0}%
 bar.cyber-io.efficiency-absorption=\u0415\u0444\u0435\u043A\u0442\u0438\u0432\u043D\u0456\u0441\u0442\u044C \u043F\u043E\u0433\u043B\u0438\u043D\u0430\u043D\u043D\u044F: {0}%
-bar.cyber-io.team=\u041A\u043E\u043C\u0430\u043D\u0434\u0430: {0}
 bar.cyber-io.range=\u0414\u0430\u043B\u044C\u043D\u0456\u0441\u0442\u044C: {0} \u0431\u043B\u043E\u043A\u0456\u0432
 bar.cyber-io.cool-down=\u041F\u0435\u0440\u0435\u0437\u0430\u0440\u044F\u0434\u043A\u0430: {0} \u0441\u0435\u043A.
 bar.cyber-io.is-alive=\u0427\u0438 \u0436\u0438\u0432\u0438\u0439: {0}
 bar.cyber-io.is-projecting=\u0427\u0438 \u043F\u0440\u043E\u0454\u043A\u0442\u0443\u0454\u0442\u044C\u0441\u044F: {0}
 bar.cyber-io.rest-restore=Rest Restore: {0}
 bar.cyber-io.charge=\u0417\u0430\u0440\u044F\u0434: {0} \u0441\u0435\u043A.
-bar.cyber-io.is-asleep=\u0427\u0438 \u0441\u043F\u0438\u0442\u044C: {0}
 bar.cyber-io.last-damaged=\u041E\u0441\u0442\u0430\u043D\u043D\u044F \u0448\u043A\u043E\u0434\u0430: {0} \u0441\u0435\u043A.
-bar.cyber-io.progress=\u041F\u0440\u043E\u0433\u0440\u0435\u0441: {0}%
 bar.cyber-io.prism=\u041F\u0440\u0438\u0437\u043C\u0430
-bar.cyber-io.prism.pl=\u041F\u0440\u0438\u0437\u043C\u0438
-bar.cyber-io.linked=\u0417'\u0454\u0434\u043D\u0430\u043D\u043E
+bar.cyber-io.unlinked=\u0417'\u0454\u0434\u043D\u0430\u043D\u043E
 bar.cyber-io.linked.no=\u041D\u0435 \u0437'\u0454\u0434\u043D\u0430\u043D\u043E
 bar.cyber-io.receiver=\u041E\u0442\u0440\u0438\u043C\u0443\u0432\u0430\u0447: {0}
 bar.cyber-io.sender=\u0412\u0456\u0434\u043F\u0440\u0430\u0432\u043D\u0438\u043A: {0}
-bar.cyber-io.ani-state-last=\u041E\u0441\u0442\u0430\u043D\u043D\u0454: {0}
 bar.cyber-io.null=\u041D\u0456\u0447\u043E\u0433\u043E
 bar.cyber-io.client=\u041A\u043B\u0456\u0454\u043D\u0442: {0}
 bar.cyber-io.host=\u0425\u043E\u0441\u0442: {0}
