--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -88,23 +88,18 @@ unit.cyber-io-holo-supporter.description=A support projected by Holo Projector, 
 bar.cyber-io.generation={0} \u4EE3
 bar.cyber-io.slow-down=\u904B\u8F49\u901F\u5EA6\uFF1A-{0}%
 bar.cyber-io.efficiency-absorption=\u6548\u7387\u5438\u6536\uFF1A{0}%
-bar.cyber-io.team=\u968A\u4F0D\uFF1A{0}
 bar.cyber-io.range=\u7BC4\u570D\uFF1A{0}\u65B9\u584A
 bar.cyber-io.cool-down=\u51B7\u537B\uFF1A{0}\u79D2
 bar.cyber-io.is-alive=\u5B58\u6D3B\u8457\uFF1A{0}
 bar.cyber-io.is-projecting=\u6B63\u5728\u6295\u5F71\u4E2D\uFF1A{0}
 bar.cyber-io.rest-restore=\u6062\u5FA9\u503C\u8840\u69FD\uFF1A{0}
 bar.cyber-io.charge=\u5145\u80FD\uFF1A{0}\u79D2
-bar.cyber-io.is-asleep=\u6B63\u5728\u4F11\u7720\uFF1A{0}
 bar.cyber-io.last-damaged=\u6700\u5F8C\u50B7\u5BB3\u6642\u9593\uFF1A{0}\u79D2
-bar.cyber-io.progress=\u9032\u5EA6\uFF1A{0}%
 bar.cyber-io.prism=\u68F1\u93E1
-bar.cyber-io.prism.pl=\u68F1\u93E1
 bar.cyber-io.linked=\u5DF2\u9023\u63A5
-bar.cyber-io.linked.no=\u672A\u9023\u63A5
+bar.cyber-io.unlinked=\u672A\u9023\u63A5
 bar.cyber-io.receiver=\u63A5\u6536\u7AEF\uFF1A{0}
 bar.cyber-io.sender=\u767C\u9001\u7AEF\uFF1A{0}
-bar.cyber-io.ani-state-last=\u6700\u5F8C\u72C0\u614B\uFF1A{0}
 bar.cyber-io.null=\u7A7A
 bar.cyber-io.client=\u5BA2\u6236\u7AEF\uFF1A{0}
 bar.cyber-io.host=\u4E32\u6D41\u5668\uFF1A{0}
@@ -114,7 +109,7 @@ bar.cyber-io.rest-resurrect=Rest Life: {0} times
 # Bundles
 cyber-io.cost.second=sec
 cyber-io.cost.minute=min
-cyber-io.speed-increase.range={0}% to {1}%
+cyber-io.speed-increase.range=from {0}% to {1}%
 # Controls
 control.cyber-io.update-mod.success=CyberIO {0} updated successfully. Please restart the game to reload CyberIO.
 control.cyber-io.update-mod.failed=Failed to update CyberIO because {0}.
